NetBSD Problem Report #40730

From www@NetBSD.org  Mon Feb 23 22:43:52 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 0206863B946
	for <gnats-bugs@gnats.netbsd.org>; Mon, 23 Feb 2009 22:43:52 +0000 (UTC)
Message-Id: <20090223224350.DD27E63B8C3@www.NetBSD.org>
Date: Mon, 23 Feb 2009 22:43:50 +0000 (UTC)
From: ad@netbsd.org
Reply-To: ad@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: any user can crash the system with KERN_SA
X-Send-Pr-Version: www-1.0

>Number:         40730
>Category:       kern
>Synopsis:       any user can crash the system with KERN_SA
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 23 22:45:00 +0000 2009
>Closed-Date:    Tue Feb 21 22:20:02 +0000 2012
>Last-Modified:  Tue Feb 21 22:20:02 +0000 2012
>Originator:     Andrew Doran
>Release:        5.0_RC2
>Organization:
The NetBSD Project
>Environment:
i386, SMP system
>Description:
As per summary.
>How-To-Repeat:
http://www.gelato.unsw.edu.au/patches/pthreadbench/pthreadbench.tar.gz

export PTHREAD_CONCURRENCY=8
while true; do
 ./contested &
 ./wakeup &
 ./... &
 ...
done

I recall MySQL sysbench and other stress tests also causing crashes.

>Fix:
Disable SA compat in shipped kernels for release of 5.0.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->ad
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Mon, 02 Mar 2009 19:46:46 +0000
Responsible-Changed-Why:
take this back off me if you want to fix it.


Responsible-Changed-From-To: ad->kern-bug-people
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Mon, 02 Mar 2009 22:11:57 +0000
Responsible-Changed-Why:
disabled by default


State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Tue, 21 Feb 2012 22:20:02 +0000
State-Changed-Why:
KERN_SA is nuked from HEAD.  Not going to be fixed elsewhere.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.