PR kern/40730 any user can crash the system with KERN_SA

Disable SA. It can be re-enabled with sysctl -w kern.no_sa_support=0.